2005-12-30  James Turner  <james@worldforge.org>

	* test/avatarTest.cpp, test/avatarTest.h, test/Makefile.am: add in
	  new file for tests on Avatar - currently just relating to wield.
	  
	* test/agent.cpp, test/agent.h: process WIELD operations correctly.
	
	* test/stubServer.cpp: add a hammer tool to the world, with multiple
	  supported operations.
	  
	* Eris/EntityRef.cpp, Eris/EntityRef.h: fix numerous issues with copying
	  entity references, since copy semantics of sigc::connection are not
	  what I thought they were.
	  
	* Eris/View.cpp, Eris/View.h: more sigc 2.0 migration work.

	* Eris/Avatar.h: add an accessor for the currently wielded entity.
	  Note this method will be changed or revised when support for multiple
	  wields is added.
	  
	* Eris/Avatar.cpp: avoid calling onWieldedChanged twice in some cases.

2005-12-29  James Turner  <james@worldforge.org>
	  
	* test/signalHelpers.h: add reset() method to more signal recorders.
	
	* test/viewTest.cpp, test/viewTest.h: added test for handlng Unseen
	  operations.
	  
	* Eris/IGRouter.cpp: fixed handled of Unseen ops.
	  
2005-12-29  James Turner  <james@worldforge.org>

	* Eris/Connection.h: allow the test harness to directly inject operations
	  for dispatch - this simplifies many test cases.
	  
	* test/signalHelpers.h: add reset() method to more signal recorders.
	
	* test/viewTest.cpp, test/viewTest.h: revised test for entity creation
	  processing.
	  
	* test/testUtils.cpp, test/testUtils.h: add the injector helper to pass
	  operations directly to an Eris::Connection.

2005-12-20  James Turner  <james@worldforge.org>

	* Eris/IGRouter.cpp, Eris/View.cpp, Eris/View.h: add support for handling
	  the Unseen response from cyphesis.
	  
	* Eris/Operations.cpp, Eris/Operations.h: add Unseen custom op
	
	* Eris/BaseConnection.cpp: register factories for Attack and Unseen with
	  the global Factories instance.

	* Eris/View.cpp, Eris/View.h: don't treat sight(create) as automatic