@@ -17,7 +17,6 @@ BUGS
 
 Test Cases
 
-- hear on Avatar
 - Avatar::place
 - picking
 
